--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,9 @@
-name: test
-run-name: Setting up the test database
+name: hawthorn
+run-name: Setting up the Hawthorn database
 on: [push]
 jobs:
   test-output:
-    runs: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
-      - name: Test output
+      - name: Test Output
         run: echo "Here is a test"
