--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,5 @@
-name: hawthorn
-run-name: Setting up the Hawthorn database
+name: test
+run-name: Setting up the test database
 on: [push]
 jobs:
   test-output:
@@ -7,3 +7,11 @@ jobs:
     steps:
       - name: Test Output
         run: echo "Here is a test"
+  connect-remote:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Show databases
+        run: mysql -h ${{ secrets.DB_HOSTNAME }} --port 3306 -u${{ secrets.DB_USER }} -p${{ secrets.DB_PASSWORD }} -e "SHOW DATABASES";
+      - name: Run a sample SQL on remote
+        run: mysql -h ${{ secrets.DB_HOSTNAME }} --port 3306 -u${{ secrets.DB_USER }} -p${{ secrets.DB_PASSWORD }} -e "source mysql/test_scripts.sql";
